--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+.idea/
+*.iml
+target/
+.vagrant/
+
 # Compiled class file
 *.class
 
@@ -11,7 +16,6 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
 *.ear
 *.zip
